# Layerwise-Concept-Capture-and-Fusion

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: openclip_cat_remote.py  openclip_coco_batch.py  openclip_coco_batch_fast.py  openclip_coco_batch_fcv.py  openclip_coco_batch_pseudo.py  openclip_cv_wrapper_example.py  openclip_fcv_wrapper_example.py  timm_cat_remote.py  timm_cv_wrapper_example.py  timm_fcv_wrapper_example.py  timm_test_wrapper_example.py  torchvision_cat_remote.py  torchvision_cv_wrapper_example.py  torchvision_fcv_wrapper_example.py
src/lccf/: __init__.py  detect.py  types.py  utils.py  wrap.py
src/lccf/backends/openclip/: functional.py  wrapper.py
src/lccf/backends/timm/: functional.py  wrapper.py
src/lccf/backends/torchvision/: functional.py  wrapper.py
tests/: test_openclip_wrapper.py  test_timm_wrapper.py  test_torchvision_wrapper.py  test_wrapper_consistency.py
